<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor"
    tools:context=".meja.AddMeja">

    <ImageButton
        android:id="@+id/add_table_ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/secondary"
        android:layout_marginTop="@dimen/empat_dua"
        android:layout_marginStart="@dimen/dua_empat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/add_table_tv_title"
        style="@style/TextFormTitle"
        android:layout_marginTop="@dimen/empat_puluh"
        android:text="@string/add_meja"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_table_tv_number"
        style="@style/TextForm"
        android:layout_marginTop="@dimen/empat_delapan"
        android:text="@string/no_meja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_table_ib_back" />

    <EditText
        android:id="@+id/add_table_et_number"
        style="@style/TextFormInput"
        android:inputType="number"
        android:autofillHints=""
        tools:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_table_tv_number"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_table_btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lima_enam"
        android:layout_marginStart="@dimen/dua_empat"
        android:layout_marginEnd="@dimen/dua_empat"
        android:layout_marginTop="@dimen/empat_delapan"
        android:backgroundTint="@color/primary"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_table_et_number" />

</androidx.constraintlayout.widget.ConstraintLayout>